[package]
name = "crawl"
version = "0.1.0"
authors = ["Shannyn"]
edition = "2021"
description = "Simple crawler that will reach one domain and create a tree of found links to the initial site."

[[bin]]
name = "crawl"
path = "src/main.rs"

[dependencies]
clap = { version = "^4", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
crawl_daemon = { path = "../daemon" }